﻿HISTORY

  Version 7.0.3 2017-05-xx
  ------------------------------------------------------------------------------
    - Estonian translation was updated


  Version 7.0.2 2016-12-17
  ------------------------------------------------------------------------------
    - graphical and command line tools were optimized for speed and size
    - the following translations were updated:

      Arabic, Filipino (Tagalog), Iloko, Indonesian,
      Japanese, Ukrainian, Uzbek (Latin)


  Version 7.0.1 2016-03-26
  ------------------------------------------------------------------------------
    - wxWidgets were upgraded to the latest 3.1.0 release
    - crash handler was improved to handle division by zero errors
    - Uzbek (Latin) translation was added
    - the following translations were updated:
    
      Filipino (Tagalog), Iloko, Korean


  Version 7.0.0 2015-12-23
  ------------------------------------------------------------------------------
    RC1:
    - few minor bugs were fixed
    - the following translations were updated:

      Filipino (Tagalog), Spanish
    
    beta6:
    - few major bugs affecting thread safety were fixed

    beta5:
    - wxWidgets were upgraded to the latest stable 3.0.2 release
    - a lot of minor bugs were fixed
    - Finnish translation was updated
    - NOTE: the language selection got broken, because wxWidgets 3.0.2
      uses different language identifiers; just click Settings > Language
      and select yours once again to fix that
    
    beta4:
    - safer options were used for compilation
    - Slovak translation was updated
    - one minor bug was fixed
    
    beta3:
    - crash handling was reimplemented
    - few minor bugs were fixed
    - Portuguese (Brazil) translation was updated

    beta2:
    - the following translations were updated:

      Catalan, Chinese (China), Chinese (Taiwan), Czech, Danish, Dutch, 
      English (United Kingdom), French, Georgian, German, Greek, Hungarian, 